--- a/HTML Basic Temp copy.htm
+++ b/HTML Basic Temp copy.htm
@@ -20,6 +20,10 @@ alert("hello," + name);
 <h1>Main Heading</h1>                                                                                           
 
 <p> This is a very simple web page</p>
+
+
+
+<p> additions to test git hub.</p>
     
     <script src="script.js"></script>
    
