#044 more changes for testing

--- a/test #2.htm
+++ b/test #2.htm
@@ -20,6 +20,7 @@ alert("hello," + name);
 <h1>Main Heading</h1>                                                                                           
 
 <p> This is a very simple web page</p>
+<p> here are some more changes</p>
     
     <script src="script.js"></script>
    
