--- a/test2.htm
+++ b/test2.htm
@@ -21,6 +21,7 @@ alert("hello," + name);
 
 <p> This is a very simple web page</p>
 <p> here are some more changes</p>
+<p>one last change</p>
     
     <script src="script.js"></script>
    
