--- a/test2.htm
+++ b/test2.htm
@@ -22,6 +22,7 @@ alert("hello," + name);
 <p> This is a very simple web page</p>
 <p> here are some more changes</p>
 <p>one last change</p>
+<p>one last one</p>
     
     <script src="script.js"></script>
    
