new paragraph added for test

--- a/test2.htm
+++ b/test2.htm
@@ -23,6 +23,7 @@ alert("hello," + name);
 <p> here are some more changes</p>
 <p>one last change</p>
 <p>one last one</p>
+<p> changed</p>
     
     <script src="script.js"></script>
    
